--- a/stats-glow-mind/src/styles.css
+++ b/stats-glow-mind/src/styles.css
@@ -2,6 +2,10 @@
 html, body {
     height: 100%;
 }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
 .wrapper {
     display: flex;
     align-items: center;
@@ -9,6 +13,7 @@ html, body {
     height: auto;
     background-color: #f5f5f5;
 }
+/*
 .header {
     display: flex;
     justify-content: space-between;
@@ -16,7 +21,7 @@ html, body {
     padding: 0.8%;
     background-color: #002649;
     color: white;
-}
+}*/
 
 /* Estilos Formulario */
 .box-form {
@@ -47,6 +52,7 @@ html, body {
     background-color: white;
     border: 1px solid #002649;
     padding: 2%;
+    border-radius: 10px;
 }
 .google-btn:hover {
     background-color: #ebebeb;
@@ -91,20 +97,36 @@ html, body {
     opacity: 1;
 }
 
-/* Media query para pantallas 1000px */
-@media only screen and (max-width: 1000px) {
+/* Media query para pantallas 1200px */
+@media only screen and (max-width: 1200px) {
     .google-btn {
-        font-size: 14px;
+        font-size: 16px;
+    }
+    .box-form {
+        max-width: 50%;
+    }
+    .register_icon {
+        width: 20%;
+        height: auto;
+    }
+    .google_icon {
+        width: 12%;
     }
 }
 /* Media query para pantallas @media only screen and (max-width: 600px) {
  */
 @media only screen and (max-width: 600px) {
     .google-btn {
-        font-size: 10px;
+        font-size: 12px;
+    }
+    .box-form {
+        max-width: 70%;
+    }
+    .register_icon {
+        width: 15%;
+        height: auto;
+    }
+    .google_icon {
+        width: 10%;
     }
 }
-
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
