--- a/stats-glow-mind/src/app/components/admin/admin.component.css
+++ b/stats-glow-mind/src/app/components/admin/admin.component.css
@@ -1,12 +1,53 @@
-.user {
-    border: 1px solid black;
-    border-radius: 20px;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    overflow: hidden;
-    margin-bottom: 20px;
+/* Estilos Admin */
+.admin {
+    width: 100%;
+    display: flex;
+    margin-bottom: 5%;
+    padding: 5%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.users-container {
+    display: flex;
+    width: auto;
+    justify-content: space-between;
+    margin-bottom: 2%;
 }
 
-.user .info {
-    padding: 10px 20px;
+/* Estilos Cards Material */
+.card {
+    width: auto;
+    margin: 2.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.card-content {
+    margin-top: 5%;
+}
+.avatar {
+    background-image: url('../../../assets/images/icons/register.png');
+    background-size: cover;
+}
+mat-card-title {
+    font-size: 18px;
+    color: #002649;
+    font-family: 'Zen Dots', sans-serif;
+}
+mat-card-actions {
+    margin-top: 5%;
+}
+mat-card-actions button {
+    margin: 2%;
+}
+
+/* Media query para pantallas 600px */
+@media only screen and (max-width: 600px) {
+    p, mat-card-actions button{
+        font-size: 12px;
+    }
+    mat-card-title {
+        font-size: 14px;
+    }
 }
