--- a/stats-glow-mind/src/app/components/main/main.component.css
+++ b/stats-glow-mind/src/app/components/main/main.component.css
@@ -12,7 +12,7 @@
     margin-right: 1%;
     transition: transform 0.3s ease;
 }
-.basket_icon:hover {
+.basket_icon:hover, .card {
     transform: scale(1.1);
     cursor: pointer;
 }
@@ -20,13 +20,6 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-}
-button {
-    width: 20%;
-    font-size: 22px;
-    color: #002649;
-    background-color: white;
-    font-family: 'Zen Dots', sans-serif;
 }
 
 /* Estilos Nombre Usuario */
@@ -37,7 +30,8 @@ button {
     background-color: #f5f5f5;
 }
 .user-btn {
-    width: 10%;
+    margin-top: 0.5%;
+    width: auto;
     margin-right: 1%;
     font-size: 12px;
     color: #002649;
@@ -58,10 +52,35 @@ button {
     font-family: 'Zen Dots', sans-serif;
 }
 
+/* Estilos Cards Material */
+.card {
+    width: 20%;
+    margin: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.card-content {
+    margin-top: 5%;
+    text-align: center;
+}
+mat-card-title {
+    font-size: 22px;
+    color: #002649;
+    font-family: 'Zen Dots', sans-serif;
+}
+button {
+    margin: 2%;
+}
+
 /* Media query para pantallas 1200px */
 @media only screen and (max-width: 1200px) {
-    button {
-        font-size: 20px;
+    .card {
+        width: 25%;
+    }
+    mat-card-title {
+        font-size: 18px;
     }
 }
 /* Media query para pantallas 1000px */
@@ -69,14 +88,24 @@ button {
     p{
         font-size: 12px;
     }
-    button {
-        font-size: 16px;
+    .user-btn {
+        font-size: 10px;
     }
+    mat-card-title {
+        font-size: 14px;
+    }
+    .card {
+        width: 30%;
+    }
+    
 }
 /* Media query para pantallas 800px */
 @media only screen and (max-width: 800px) {
-    button {
-        font-size: 12px;
+    .card {
+        width: 40%;
+    }
+    .main-container {
+        flex-wrap: wrap;
     }
 }
 /* Media query para pantallas 600px */
@@ -84,7 +113,14 @@ button {
     p{
         font-size: 8px;
     }
-    button {
-        font-size: 10px;
+    .user-btn {
+        font-size: 8px;
+    }
+
+    mat-card-title {
+        font-size: 12px;
+    }
+    .card {
+        width: 45%;
     }
 }
