--- a/stats-glow-mind/src/app/components/register/register.component.css
+++ b/stats-glow-mind/src/app/components/register/register.component.css
@@ -3,14 +3,15 @@ h1 {
     color: #002649;
     font-size: 35px;
 }
-label {
+mat-label, mat-form-field, .enviar, mat-select {
     font-size: 18px;
 }
-input {
-    font-size: 18px;
+mat-form-field.select {
+    margin-left: 5%;
+    width: 50%;
 }
-.enviar {
-    font-size: 18px;
+mat-form-field {
+    width: 100%;
 }
 
 /* Media query para pantallas 1000px */
@@ -18,14 +19,8 @@ input {
     h1 {
         font-size: 25px;
     }
-    label {
-        font-size: 14px;
-    }
-    input {
-        font-size: 14px;
-    }
-    .enviar {
-        font-size: 14px;
+    mat-label, mat-form-field, .enviar, mat-select {
+        font-size: 16px;
     }
 }
 /* Media query para pantallas 600px */
@@ -33,13 +28,7 @@ input {
     h1 {
         font-size: 15px;
     }
-    label {
-        font-size: 10px;
-    }
-    input {
-        font-size: 10px;
-    }
-    .enviar {
-        font-size: 10px;
+    mat-label, mat-form-field, .enviar, mat-select {
+        font-size: 12px;
     }
 }
