--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.css
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.css
@@ -1,12 +1,12 @@
+/* Estilos Clasificación */
 .standings {
   display: flex;
-  justify-content: space-between;  /* Para espacio entre los bloques */
+  flex-wrap: wrap;
   padding-left: 2.5%;
   padding-right: 2.5%;
   padding-bottom: 2.5%;
   background-color: #f5f5f5;
 }
-  
 .conference-table {
   text-align: center;
   width: 60%;
@@ -15,30 +15,32 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 1%
+}
+h2 {
+  font-size: 26px;
+  font-family: 'Zen Dots', sans-serif;
 }
 
+/* Estilos tabla */
 table {
   margin-top: 5%;
   font-size: 16px;
 }
-
 thead {
   background-color: #002649;
   color: white;
 }
-
 th, td {
   padding: 1%;
   text-align: center;
   border-bottom: 1px solid #ddd;
   width: 10%;
 }
-
 .team {
   text-align: left;
   border-collapse: collapse;
 }
-  
 img {
   max-width: 75%;
   height: auto;
@@ -46,26 +48,12 @@ img {
   margin: 0 auto;
 }
 
-h2 {
-  font-size: 26px;
-  font-family: 'Zen Dots', sans-serif;
-}
-
-/* Media query para pantallas pequeñas */
-@media only screen and (max-width: 1000px) {
-  table {
-      font-size: 12px; /* Ajusta el tamaño de fuente para pantallas pequeñas */
-  }
-  h2{
-    font-size: 16px;
-  }
-}
 /* Media query para pantallas pequeñas */
 @media only screen and (max-width: 600px) {
   table {
-      font-size: 8px; /* Ajusta el tamaño de fuente para pantallas pequeñas */
+      font-size: 12px;
   }
   h2{
-    font-size: 10px;
+    font-size: 16px;
   }
 }
