--- a/stats-glow-mind/src/app/components/stats/stats.component.html
+++ b/stats-glow-mind/src/app/components/stats/stats.component.html
@@ -8,7 +8,7 @@
             <img class="stats_icon" src="../assets/images/icons/play.png" alt="Playoffs">
             PLAYOFFS
         </button>
-        <button routerLink="/stats/games" routerLinkActive="active">
+        <button (click)="showComponent('games')" routerLink="/stats/games" routerLinkActive="active">
             <img class="stats_icon" src="../assets/images/icons/game.png" alt="Partidos">
             PARTIDOS
         </button>
@@ -20,4 +20,5 @@
 </div>
 
 <stats-standings *ngIf="activeComponent === 'standings'"></stats-standings>
+<stats-games *ngIf="activeComponent === 'games'"></stats-games>
 <stats-leaders *ngIf="activeComponent === 'leaders'"></stats-leaders>
