--- a/stats-glow-mind/src/app/components/stats/games/games.component.css
+++ b/stats-glow-mind/src/app/components/stats/games/games.component.css
@@ -1,10 +1,9 @@
 /* Estilos Games */
 .games {
-    width: 100%;
-    margin-bottom: 5%;
-    padding: 5%;
+    display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    padding: 1.5%;
+    background-color: #f5f5f5;
 }
 .date-time-info {
     display: flex;
@@ -65,4 +64,39 @@ img {
 }
 strong {
     color: #FE5B3B;
+}
+
+/* Media query para pantallas 850px */
+@media only screen and (max-width: 850px) {
+    .card-header, .score{
+        font-size: 16px;
+    }
+    .card-content, .date-time-info {
+        font-size: 13px;
+    }
+    .logo {
+        width: 25%;
+    }
+    .card {
+        width: 60%;
+    }
+}
+
+/* Media query para pantallas 600px */
+@media only screen and (max-width: 600px) {
+    .card-header, .score{
+        font-size: 12px;
+    }
+    .card-content, .date-time-info {
+        font-size: 10px;
+    }
+    .logo {
+        width: 30%;
+    }
+    mat-form-field {
+        width: 50%;
+    }
+    .card {
+        width: 80%;
+    }
 }
