componente teams y servicio firestore

--- a/stats-glow-mind/src/app/components/main/main.component.html
+++ b/stats-glow-mind/src/app/components/main/main.component.html
@@ -24,7 +24,7 @@
                     </p>
                 </mat-card-content>
             </mat-card>
-            <mat-card class="card">
+            <mat-card class="card" routerLink="/teams">
                 <img mat-card-image class="basket_icon" src="../assets/images/icons/data_basket.png" alt="Data Basketball">
                 <mat-card-header>
                     <mat-card-title>EQUIPOS</mat-card-title>
